fix db character and add test for db

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,24 @@
 spring:
   application:
-  name: dbProject
+    name: dbProject
   # DataSource Config
   datasource:
-  driver-class-name: com.mysql.jdbc.Driver
-  url: jdbc:mysql://47.96.165.184:3306
-  username: codeep
-  password: jacket123456
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/db
+    username: root
+    password: jacket123456
+  # session ????
+  session:
+    timeout: 86400
 server:
   port: 8080
+  servlet:
+    context-path: /api
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: false
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # ????????????(since 3.3.0,????????????2)
+      logic-delete-value: 1 # ??????(??? 1)
+      logic-not-delete-value: 0 # ??????(??? 0)
